--- a/WarfaceLineups/client/public/index.html
+++ b/WarfaceLineups/client/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Warface Lineups</title>
+    <link rel="icon" href="/w.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
