--- a/WarfaceLineups/client/public/index.html
+++ b/WarfaceLineups/client/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Warface Lineups"
+      content="Сервис для Warface с раскидками, фишками и прочее.."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Warface Lineups</title>
