--- a/WarfaceLineups/client/public/index.html
+++ b/WarfaceLineups/client/public/index.html
@@ -8,6 +8,7 @@
       name="Warface Lineups"
       content="Сервис для Warface с раскидками, фишками и прочее.."
     />
+    <meta name="yandex-verification" content="eb3142a8b1b65063" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Warface Lineups</title>
     <link rel="icon" href="/w.ico">
