--- a/WarfaceLineups/client/public/index.html
+++ b/WarfaceLineups/client/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Warface Lineups"
-      content="Сервис для Warface с раскидками, фишками и прочее.."
+      name="description"
+      content="Сервис для Warface с раскидками смоков, фишками и прочее.."
     />
     <meta name="yandex-verification" content="eb3142a8b1b65063" />
     <title>Warface Lineups</title>
-    <link rel="icon" href="/w.ico">
+    <link rel="icon" href="/favicon.ico">
 
   </head>
   <body>
